the bloody change that fixed the damned screen width issue on mobile devices

--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -38,8 +38,7 @@
 		    background-size: cover;
 
 		    .project {
-
-    		    color: #CCCCCC;
+    		    color: $white;
     		    text-align: center;
 
     		    .logo {
@@ -54,16 +53,10 @@
                     text-shadow: 0px 0px 5px #000000;
 
                     strong {
-                        color: #FFF;
+                        color: $white;
                         font-weight: 800;
                     }
                 }
-
-    		    .btn {
-        		    color: inherit;
-        		    background: transparent;
-                    background-color:rgba(0, 0, 0, 0.3);
-    		    }
 
     		    img {
         		    width: 200px;
@@ -77,8 +70,9 @@
 				margin: 20px auto 20px auto;
 			}
 
-			.row {
-        		padding: 60px 30px;
+			.owl-row {
+				margin-top: 60px;
+        		padding: 0 30px;
 			}
 		}
 
