--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -231,9 +231,3 @@ hr {
 		}
 	}
 }
-
-@media (min-width: 768px) {
-	hr {
-		max-width: 200px;
-	}
-}
